Template UI fixes